manifests/k8-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: dev
  labels:
    app: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      imagePullSecrets:
        - name: ecr-creds 
      containers:
        - name: spring-boot-app
          image: 839133527922.dkr.ecr.us-east-1.amazonaws.com/pipeline:13
          ports:
            - containerPort: 8082

---

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: dev
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
